--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <body>
     <div class="huddle">
       <header class="header">
-        <img class="header__logo" src="/images/logo.svg" alt="" />
+        <img class="header__logo" src="../images/logo.svg" alt="" />
       </header>
 
       <main>
